# libperiph

./: .gitignore  CPPLINT.cfg  Makefile  README.md  debug.cpp  debug.hpp  main.cpp  soft_timer.cpp  soft_timer.hpp  sonar-project.properties  stm32f3xx.h  test.sh  text.cpp  text.hpp
.github/workflows/: arm_build.yml  code_style.yml  sonarcloud.yml  tests.yml  unit_tests.yml
Src/Drivers/Inc/: encoder_AS5600.h
Src/Drivers/Src/: encoder_AS5600.c
common/: CMakeLists.txt  Makefile  debug.cpp  debug.hpp  libperiph_common.h  ring_buffer.c  ring_buffer.h  soft_timer.cpp  soft_timer.hpp  text.cpp  text.hpp  ttl.c  ttl.h
devices/: Makefile  esp8266.cpp  esp8266.hpp  leds_rotation.cpp  leds_rotation.hpp  motor.cpp  motor.hpp  motors.cpp  motors.hpp  rangefinder.c  rangefinder.h  servos.c  servos.h  seven_segments_indicators.cpp  seven_segments_indicators.hpp  ws2812.c  ws2812.h
devices/internal_led/: Makefile  README.md  internal_led.c  internal_led.h
devices/internal_led/legacy/: legacy_led.c  legacy_led.h
devices/internal_led/rgb/: rgb_led.c  rgb_led.h
devices/rgb_leds/: CMakeLists.txt  README.md  pwm_rgb_led.c  pwm_rgb_led.h  rgb_color.h  ws2812.c  ws2812.h
devices/servos/: CMakeLists.txt  README.md  common.c  common.h  servos.c  servos.h  ttl.c  ttl.h
periphery/: adc.cpp  adc.hpp  target.cpp  target.hpp  timer.cpp  timer.hpp  uart.cpp  uart.hpp
platform_specific/: Makefile  README.md  hal_adc.h  hal_exti.h  hal_i2c.h  hal_timers.h  hal_uart.h  hal_uart_threadsafe.h  i2c_manager.h
platform_specific/dummy/: Makefile  hal_adc.c  hal_exti.c  hal_i2c.c  hal_spi.c  hal_timers.c  hal_uart.c  hal_uart_threadsafe.c  i2c_manager.c
platform_specific/hal_adc/: CMakeLists.txt  README.md  hal_adc.h
platform_specific/hal_adc/dummy/: hal_adc.c
platform_specific/hal_adc/stm32/: hal_adc.c
platform_specific/hal_adc/ubuntu/: hal_adc.c
platform_specific/hal_i2c/: CMakeLists.txt  README.md  hal_i2c.h  i2c_common.c
platform_specific/hal_i2c/stm32/: hal_i2c.c
platform_specific/hal_i2c/ubuntu/: hal_i2c.c  hal_i2c.cpp  sitl_i2c.hpp
platform_specific/hal_spi/: CMakeLists.txt  README.md  hal_spi.h
platform_specific/hal_spi/dummy/: hal_spi.c
platform_specific/hal_spi/stm32/: hal_spi.c
platform_specific/hal_spi/ubuntu/: hal_spi.c
platform_specific/hal_timers/: CMakeLists.txt  README.md  hal_timers.h
platform_specific/hal_timers/stm32/: hal_timers.c
platform_specific/hal_timers/ubuntu/: hal_timers.c
platform_specific/hal_uart/: CMakeLists.txt  README.md  hal_uart.h
platform_specific/hal_uart/dummy/: hal_uart.c
platform_specific/hal_uart/stm32/: hal_uart.c  hal_uart_common.c  hal_uart_rx.c  hal_uart_tx.c
platform_specific/hal_uart/ubuntu/: hal_uart.c
platform_specific/stm32/: Makefile  hal_adc.c  hal_adc.h  hal_exti.c  hal_exti.h  hal_i2c.c  hal_i2c.h  hal_spi.c  hal_spi.h  hal_timers.c  hal_timers.h  hal_uart.c  hal_uart.h  hal_uart_threadsafe.c  hal_uart_threadsafe.h  i2c_manager.c  i2c_manager.h
platform_specific/stm32/adc/: adc.cpp  adc.hpp  hal_adc.c  hal_adc.h
platform_specific/threadsafe_i2c/: i2c_manager.h
platform_specific/threadsafe_i2c/stm32/: i2c_manager.c
platform_specific/threadsafe_uart/: hal_uart_threadsafe.h
platform_specific/threadsafe_uart/dummy/: hal_uart_threadsafe.c
scripts/: check_crlf.sh
scripts/code_style/: astyle_check_all.sh  astyle_fix_all.sh  cpplint.sh  crlf.sh  get_pathes.sh
sensors/: Makefile  acs712.c  baro_bmp280.c  bmp280.c  bmp280.h  encoder.cpp  encoder.hpp  esc_flame.c  hmc5883l.c  hmc5883l.h  mag_hmc5883l.c  mag_rm3100.c  mag_rm3100.h  mpu9250.c  mpu9250.h  ms4525do.c  ms4525do.h  rangefinder_garmin_lite.c  rangefinder_garmin_lite.h  rangefinder_srf_05.c  rangefinder_srf_05.h  rangesensor_sf1xx.c  rangesensor_sf1xx.h  rangesensor_tf_luna.c  rangesensor_tf_luna.h  rm3100.c  rm3100.h  temperature_sensor.c  temperature_sensor.cpp  temperature_sensor.h  temperature_sensor.hpp  ublox.c  ublox.h
sensors/barometer/: CMakeLists.txt  README.md  bmp280.c  bmp280.h
sensors/current_sensor/: CMakeLists.txt  README.md  acs712.c  acs712.h
sensors/differential_pressure/: CMakeLists.txt  README.md  ms4525do.c  ms4525do.h  ms4525do_parser.c  ms4525do_parser.h
sensors/encoder/: README.md  as5600.c  as5600.h  encoder.cpp  encoder.hpp
sensors/esc/: CMakeLists.txt  README.md  common.h  flame.c  flame.h  thunder.c  thunder.h
sensors/gps/: CMakeLists.txt  README.md  nmea.h  ublox.c  ublox.h  ublox_commands.c  ublox_commands.h  ublox_emulation.c  ublox_emulation.h  ublox_internal.h  ubx_nav_status.h
sensors/gps/ubx/: nav_cov.h  nav_pvt.h  (+1 more)
sensors/gps_nmea/: nmea.c  nmea.h
sensors/imu/: mpu9250.c  mpu9250.h
sensors/magnetometer/: CMakeLists.txt  README.md  hmc5883l.c  hmc5883l.h  rm3100.c  rm3100.h
sensors/rangefinder/: README.md  garmin_lite.c  garmin_lite.h  sf1xx.c  sf1xx.h  srf_05.c  srf_05.h  tf_luna.c  tf_luna.h  vl53l0x.c  vl53l0x.h
sensors/temperature_sensor/: CMakeLists.txt  README.md  stm32_temperature.c  stm32_temperature.h  temperature_sensor.c
tests/: CMakeLists.txt  Makefile  build_arm.sh  config.h  hal_i2c_mock.cpp  hal_spi_mock.cpp  hal_timers.h  hal_timers_mock.c  main.h  test_bmp280.cpp  test_esc_flame.cpp  test_hmc5883l.cpp  test_ms4525do.cpp  test_nmea.cpp  test_ring_buffer.cpp  test_rm3100.cpp  test_servo.cpp  test_stm32_temperature.cpp  test_ublox.cpp  unit_tests.sh  unit_tests_with_coverage.sh
tests/devices/rgb_leds/: test_ws2812.cpp
tests/devices/servos/: test_common.cpp  test_servo.cpp  test_ttl.cpp
tests/periphery/: test_adc.cpp  test_i2c.cpp  test_spi.cpp  test_timers.cpp  test_uart.cpp
tests/rangefinder/: tf_luna.cpp
tests/sensors/: test_bmp280.cpp
tests/sensors/current_sensor/: test_acs712.cpp
tests/sensors/dprs/: test_ms4525do.cpp
tests/sensors/esc/: test_esc_alpha.cpp  test_esc_flame.cpp  test_esc_thunder.cpp
tests/sensors/gnss_ublox/: test_ublox.cpp  test_ublox_commands.cpp
tests/sensors/mag/: test_hmc5883l.cpp  test_rm3100.cpp
tests/sensors/rangefinder/: test_garmin_lite.cpp  test_tf_mini.cpp  tf_luna.cpp
tests/sensors/temperature_sensor/: test.cpp
(+24 files in other folders)
